netpol-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-denyallns1
  namespace: ns1 # namespace that we want this Networkpolicy to be applied
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    # allow access to Kubernetes DNS:
    - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
